--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,8 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="4"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -25,13 +20,8 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="5"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -41,13 +31,8 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="6"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -57,13 +42,8 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="7"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.082"
@@ -137,13 +117,8 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="8"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -153,13 +128,8 @@
 
     <Button
         android:id="@+id/button0"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="0"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -169,13 +139,8 @@
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="9"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -237,13 +202,8 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="1"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -253,13 +213,8 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="2"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -269,13 +224,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="72dp"
-        android:layout_height="76dp"
-        android:backgroundTint="@color/seed"
-        android:fontFamily="@font/amaranth_bold"
         android:text="3"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="34sp"
+        style="@style/numButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -306,5 +256,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.14" />
+
+    <Button
+        android:id="@+id/buttonEnter"
+        android:layout_width="90dp"
+        android:layout_height="142dp"
+        android:backgroundTint="@color/md_theme_light_tertiaryContainer"
+        android:fontFamily="@font/amaranth_bold"
+        android:text="Enter"
+        android:textColor="@color/md_theme_light_secondary"
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="302dp"
+        tools:layout_editor_absoluteY="251dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
