--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:id="@+id/button4"
         android:text="4"
         style="@style/numButtons"
+        android:onClick="enterNum4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -35,6 +36,7 @@
         android:id="@+id/button5"
         android:text="5"
         style="@style/numButtons"
+        android:onClick="enterNum5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -46,6 +48,7 @@
         android:id="@+id/button6"
         android:text="6"
         style="@style/numButtons"
+        android:onClick="enterNum6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -57,6 +60,7 @@
         android:id="@+id/button7"
         android:text="7"
         style="@style/numButtons"
+        android:onClick="enterNum7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.082"
@@ -66,6 +70,7 @@
 
     <Button
         android:id="@+id/buttonAdd"
+        android:onClick="enterAdd"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
@@ -82,6 +87,7 @@
 
     <Button
         android:id="@+id/buttonSubtract"
+        android:onClick="enterSub"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
@@ -98,6 +104,7 @@
 
     <Button
         android:id="@+id/buttonMultiply"
+        android:onClick="enterX"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
@@ -114,6 +121,7 @@
 
     <Button
         android:id="@+id/buttonDivide"
+        android:onClick="enterDiv"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
@@ -132,6 +140,7 @@
         android:id="@+id/button8"
         android:text="8"
         style="@style/numButtons"
+        android:onClick="enterNum8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -143,6 +152,7 @@
         android:id="@+id/button0"
         android:text="0"
         style="@style/numButtons"
+        android:onClick="enterNum0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -154,6 +164,7 @@
         android:id="@+id/button9"
         android:text="9"
         style="@style/numButtons"
+        android:onClick="enterNum9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -176,8 +187,8 @@
 
     <EditText
         android:id="@+id/editTextEnterOp"
-        android:layout_width="46dp"
-        android:layout_height="34dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@color/md_theme_light_secondaryContainer"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
@@ -204,6 +215,7 @@
         android:id="@+id/button1"
         android:text="1"
         style="@style/numButtons"
+        android:onClick="enterNum1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -215,6 +227,7 @@
         android:id="@+id/button2"
         android:text="2"
         style="@style/numButtons"
+        android:onClick="enterNum2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -226,6 +239,7 @@
         android:id="@+id/button3"
         android:text="3"
         style="@style/numButtons"
+        android:onClick="enterNum3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -237,12 +251,17 @@
         android:id="@+id/imageView"
         android:layout_width="93dp"
         android:layout_height="118dp"
-        app:srcCompat="@drawable/heart"
-        tools:layout_editor_absoluteX="302dp"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.946"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.11"
+        app:srcCompat="@drawable/heart" />
 
     <Button
         android:id="@+id/buttonEquals"
+        android:onClick="math"
         android:layout_width="67dp"
         android:layout_height="61dp"
         android:backgroundTint="@color/md_theme_light_tertiaryContainer"
@@ -264,7 +283,6 @@
         android:backgroundTint="@color/md_theme_light_tertiaryContainer"
         android:fontFamily="@font/amaranth_bold"
         android:text="Enter"
-        android:onClick="math"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
