--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/md_theme_light_background"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewRes"
@@ -22,9 +22,9 @@
 
     <Button
         android:id="@+id/button4"
-        android:text="4"
         style="@style/numButtons"
         android:onClick="enterNum4"
+        android:text="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -34,9 +34,9 @@
 
     <Button
         android:id="@+id/button5"
-        android:text="5"
         style="@style/numButtons"
         android:onClick="enterNum5"
+        android:text="5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -46,9 +46,9 @@
 
     <Button
         android:id="@+id/button6"
-        android:text="6"
         style="@style/numButtons"
         android:onClick="enterNum6"
+        android:text="6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -58,9 +58,9 @@
 
     <Button
         android:id="@+id/button7"
-        android:text="7"
         style="@style/numButtons"
         android:onClick="enterNum7"
+        android:text="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.082"
@@ -70,11 +70,11 @@
 
     <Button
         android:id="@+id/buttonAdd"
-        android:onClick="enterAdd"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
         android:fontFamily="@font/amaranth_bold"
+        android:onClick="enterAdd"
         android:text="+"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="40sp"
@@ -87,11 +87,11 @@
 
     <Button
         android:id="@+id/buttonSubtract"
-        android:onClick="enterSub"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
         android:fontFamily="@font/amaranth_bold"
+        android:onClick="enterSub"
         android:text="-"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="50sp"
@@ -104,11 +104,11 @@
 
     <Button
         android:id="@+id/buttonMultiply"
-        android:onClick="enterX"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
         android:fontFamily="@font/amaranth_bold"
+        android:onClick="enterX"
         android:text="x"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="34sp"
@@ -121,11 +121,11 @@
 
     <Button
         android:id="@+id/buttonDivide"
-        android:onClick="enterDiv"
         android:layout_width="72dp"
         android:layout_height="76dp"
         android:backgroundTint="@color/md_theme_light_onSecondaryContainer"
         android:fontFamily="@font/amaranth_bold"
+        android:onClick="enterDiv"
         android:text="÷"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="34sp"
@@ -138,9 +138,9 @@
 
     <Button
         android:id="@+id/button8"
-        android:text="8"
         style="@style/numButtons"
         android:onClick="enterNum8"
+        android:text="8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -150,9 +150,9 @@
 
     <Button
         android:id="@+id/button0"
-        android:text="0"
         style="@style/numButtons"
         android:onClick="enterNum0"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -162,9 +162,9 @@
 
     <Button
         android:id="@+id/button9"
-        android:text="9"
         style="@style/numButtons"
         android:onClick="enterNum9"
+        android:text="9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -176,11 +176,13 @@
         android:id="@+id/editTextEnter1"
         android:layout_width="99dp"
         android:layout_height="79dp"
+        android:layout_marginTop="@dimen/margin_text"
         android:background="@color/md_theme_light_secondaryContainer"
+        android:padding="@dimen/padding_num_text"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.069" />
@@ -202,7 +204,9 @@
         android:id="@+id/editTextEnter2"
         android:layout_width="99dp"
         android:layout_height="79dp"
+        android:layout_marginTop="@dimen/margin_text"
         android:background="@color/md_theme_light_secondaryContainer"
+        android:padding="@dimen/padding_num_text"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -213,9 +217,9 @@
 
     <Button
         android:id="@+id/button1"
-        android:text="1"
         style="@style/numButtons"
         android:onClick="enterNum1"
+        android:text="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -225,9 +229,9 @@
 
     <Button
         android:id="@+id/button2"
-        android:text="2"
         style="@style/numButtons"
         android:onClick="enterNum2"
+        android:text="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.345"
@@ -237,9 +241,9 @@
 
     <Button
         android:id="@+id/button3"
-        android:text="3"
         style="@style/numButtons"
         android:onClick="enterNum3"
+        android:text="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -249,8 +253,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="93dp"
-        android:layout_height="118dp"
+        android:layout_width="96dp"
+        android:layout_height="109dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.946"
@@ -261,36 +265,20 @@
 
     <Button
         android:id="@+id/buttonEquals"
-        android:onClick="math"
-        android:layout_width="67dp"
-        android:layout_height="61dp"
+        android:layout_width="66dp"
+        android:layout_height="65dp"
         android:backgroundTint="@color/md_theme_light_tertiaryContainer"
         android:fontFamily="@font/asul_bold"
+        android:onClick="math"
         android:text="="
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="52sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.909"
+        app:layout_constraintHorizontal_bias="0.907"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.14" />
-
-    <Button
-        android:id="@+id/buttonEnter"
-        android:layout_width="90dp"
-        android:layout_height="142dp"
-        android:backgroundTint="@color/md_theme_light_tertiaryContainer"
-        android:fontFamily="@font/amaranth_bold"
-        android:text="Enter"
-        android:textColor="@color/md_theme_light_secondary"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.937"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.426" />
+        app:layout_constraintVertical_bias="0.135" />
 
     <Button
         android:id="@+id/buttonClear"
@@ -298,6 +286,7 @@
         android:layout_height="142dp"
         android:backgroundTint="@color/md_theme_light_tertiaryContainer"
         android:fontFamily="@font/amaranth_bold"
+        android:onClick="clear"
         android:text="Clear"
         android:textColor="@color/md_theme_light_secondary"
         android:textSize="16sp"
@@ -306,6 +295,6 @@
         app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.711" />
+        app:layout_constraintVertical_bias="0.531" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
